# afp

./: .gitignore  .travis.yml  AFP.cabal  README.md  runtests.sh
src/: AdvancedTypeSystems.hs  Applicative.hs  ChurchEncodings.hs  Fix.hs  GenericProgramming.hs  MasterMind.hs  Monads.hs  Parsers.hs  SmoothPermutations.hs  StateMonadPlus.hs  TailRecursion.hs  TicTacToe.hs  TicTacToe_new.hs  TreeLabeling.hs  TreeUnfold.hs  Trie.hs  TypeClassesAndContainers.hs  TypeExtensions.hs  UntypedLambdaCalculus.hs
src/games/: MasterMind.hs
test/: QuickCheckMastermind.hs  TestMasterMind.hs  TestTreeLabeling.hs  runtests.sh
test/games/: TestMasterMind.hs
