name:                AFP
version:             0.1.0.0
synopsis:            -
-- description:
homepage:            -
license:             BSD3
license-file:        LICENSE
author:              ma489
maintainer:          ma489@mansourahmed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     TestMasterMind, AdvancedTypeSystems, Monads, UntypedLambdaCalculus, GenericProgramming, ChurchEncodings, MasterMind
  -- other-modules:
  other-extensions:    MonomorphismRestriction, FlexibleInstances, MultiParamTypeClasses, FunctionalDependencies, DeriveDataTypeable, RankNTypes
  build-depends:       base >=4.8 && <4.9, HUnit >=1.3 && <1.4, mtl >=2.2 && <2.3, containers >=0.5 && <0.6, syb >=0.6 && <0.7, random >=1.1 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
