name:                AFP
version:             0.1.0.0
synopsis:            AFP solutions
-- description:
license:             BSD3
license-file:        LICENSE
author:              ma489
maintainer:          mansour@mansourahmed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     TestMasterMind, QuickCheckMastermind, TestTreeLabeling, AdvancedTypeSystems, UntypedLambdaCalculus, GenericProgramming, TicTacToe, StateMonadPlus, ChurchEncodings, SmoothPermutations, TreeLabeling, MasterMind, TypeClassesAndContainers
  -- other-modules:
  other-extensions:    TypeSynonymInstances, FlexibleInstances, RankNTypes, ScopedTypeVariables, DeriveDataTypeable, DeriveGeneric, DeriveAnyClass, MultiParamTypeClasses, FunctionalDependencies, DeriveFunctor
  build-depends:       base >=4.8 && <4.9, HUnit >=1.3 && <1.4, QuickCheck >=2.8 && <2.9, containers >=0.5 && <0.6, syb >=0.6 && <0.7, generic-deriving >=1.10 && <1.11, mtl >=2.2 && <2.3, random >=1.1 && <1.2
  hs-source-dirs:      ., src, test
  default-language:    Haskell2010
